apps/main/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main
  namespace: dev
  labels:
    app: main
    backstage.io/kubernetes-id: main
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
        backstage.io/kubernetes-id: main
        environment: dev
    spec:
      containers:
        - name: main
          image: chaitanyapandeygspann/main:1.0.1
          ports:
            - containerPort: 5000
