apps/main/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main
  namespace: dev
  labels:
    backstage.io/kubernetes-id: main
spec:
  selector:
    app: main
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
